docs/7.56/md/abenabap_sql_path_restrictions.md
---
title: "ABAP SQL - Restrictions for Path Expressions"
description: |
  In principle, the same restrictions apply to path expressions in ABAP SQL and the CDS associations(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm 'Glossary Entry') or CTE expressions(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencte_ass
version: "7.56"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_path_restrictions.htm"
abapFile: "abenabap_sql_path_restrictions.htm"
keywords: ["select", "do", "if", "try", "data", "abenabap", "sql", "path", "restrictions"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendb_access.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql.htm) →  [ABAP SQL - Operands and Expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_operands.htm) →  [ABAP SQL - SQL path expressions sql\_path](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_path.htm) → 

ABAP SQL - Restrictions for Path Expressions

In principle, the same restrictions apply to path expressions in ABAP SQL and the [CDS associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm "Glossary Entry") or [CTE expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencte_association_glosry.htm "Glossary Entry") used there as to using a corresponding [join expression](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_join.htm). For example, a path expression cannot be used together with the addition [ORDER BY PRIMARY KEY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaporderby_clause.htm). These restrictions are documented in the corresponding clauses. The following restrictions currently also apply:

-   Requirements on the CDS entities or common table expressions
    -   The [association targets](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_target_glosry.htm "Glossary Entry") of the associations of a path expression cannot be DDIC database tables or DDIC database views with [replacement objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenreplacement_object_glosry.htm "Glossary Entry").
    -   No [literals](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_literal_v1.htm) with prefixed #domain or :domain can be used in the CDS associations of the path expression to check the fixed value in the value range of a domain.
    -   Due to [implicit client handling](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_client_handling.htm), no associations can be used whose ON condition accesses the client columns of their [association source](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_source_glosry.htm "Glossary Entry") or [association target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_target_glosry.htm "Glossary Entry"). This cannot be bypassed using the obsolete addition [CLIENT SPECIFIED](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client_obsolete.htm) either.
-   Requirements on ABAP SQL
    -   If a value greater than to 1 is defined for the [cardinality](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencardinality_glosry.htm "Glossary Entry") of an association of a path expression in the FROM clause for max, the identical path expression must also be specified in the [SELECT list](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_list.htm).
    -   If the addition CORRESPONDING or an inline declaration [@DATA(...)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_into_target.htm) is used in the [INTO](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapinto_clause.htm) clause of a SELECT statement, columns of the [SELECT list](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_list.htm) specified using a path expression must have an alias name alias defined using [AS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_list.htm).
    -   A [data source](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_data_source.htm) specified as a path expression in the [FROM clause](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfrom_clause.htm) can be used in the SELECT statement only by using an alias name tabalias defined using AS in front of the column selector ~.
    -   The obsolete addition [CLIENT SPECIFIED](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client_obsolete.htm) cannot be used together with path expressions containing [CDS associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm "Glossary Entry") whose [association target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_target_glosry.htm "Glossary Entry") is client-dependent. In path expressions in the [FROM](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfrom_clause.htm) clause, the [association sources](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_source_glosry.htm "Glossary Entry") of the associations cannot be client-dependent either.
    -   The addition [USING CLIENT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client.htm) and the obsolete addition [CLIENT SPECIFIED](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client_obsolete.htm) cannot be combined with path expressions containing [CDS associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm "Glossary Entry") or [CTE associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencte_association_glosry.htm "Glossary Entry") that are [exposed](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwith_associations_defining.htm) by common table expressions.
    -   If the alias name tabalias is specified statically using AS when the [FROM clause](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfrom_clause.htm) source\_syntax is specified dynamically, no path expressions can be used here.
    -   Path expressions cannot be used in the ON condition of a [join expression](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_join.htm).
    -   In SELECT statements, path expressions cannot be used together with the additions [FOR ALL ENTRIES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwhere_all_entries.htm) or [WITH PRIVILEGED ACCESS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_data_source.htm).

Hint

Fewer restrictions apply to the path expressions [path\_expr](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_path_expression_v2.htm) in the [ABAP CDS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_cds_glosry.htm "Glossary Entry") CDS DDL. If CDS association reads are required that are possible in ABAP CDS but not in ABAP SQL, they can be moved to a [CDS view entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_v2_view_glosry.htm "Glossary Entry").